Nov 11 2005  devel  Fixed filtercore compiling on systems without libpcre
                    Fixed dual-registration of STRING protocl
Nov 10 2005  devel  Added string extraction (currently always on)
                    Added PCRE string filtering
                    Fixed PCRE negation tests
                    Fixed filter examples to show "00:11:.." quoted mac strings
                    Added STRINGS (0|1) and ADDSTRINGSFILTER commands to toggle
                     string fetching
                    Added string logfile (type 'string')
                    Added alert logtile (type 'alert')
Nov 08 2005  devel  Added libpcre checks to configure
                    Fixed util.cc compiling process title stuff
                    Added basic lexer to util.cc
                    Re-implemented MAC address filtering
                    Added stubs for pcre filters
                    Added PCRE filter string parsing
                    Fixed infinite loop in linewrapper
                    Added filter_netclient and PCRE execution for SSID filters
Nov 07 2005  devel  Fixed encryption/decryption check for data dissectors
Nov 03 2005  devel  Added smarter error message if the card drops out of monitor
Oct 30 2005  devel  Docs, plugin tweaks
Oct 29 2005  devel  Updated info text on header mode iwprivs on linux
                    Added set_prismhdr to default wext set
Oct 28 2005  devel  Updated README.newcore
Oct 26 2005  devel  Turned on assorted packet sources (ipw2915, admtek, prism54g)
Oct 25 2005  devel  Added checking for *.bz2 *.gz files in logfile enumeration
                    Revamped attaching alerts to packets so that more than one
                     alert can be tracked
                    Cleaned up nettxt export
                    Added backlogged alerts to nettxt output per network
                    Added fetching alert backlog to alertracker
Oct 23 2005  devel  Added client CDP port/dev tracking
                    Added client XML output